// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the \`PriceLabel\` component if \`hasShadow\` is true should have the right class 1`] = `
<div
  className="ui label price-label is-clickable"
  onClick={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <Label>
    <Grid
      areColumnsCentered={false}
      className=""
      isStackable={false}
    >
      <GridColumn>
        <GridRow>
          <Heading
            className={null}
            hasMargin={true}
            isColorInverted={false}
            size="medium"
            textAlign={null}
          >
            €999
          </Heading>
        </GridRow>
        <GridRow />
      </GridColumn>
    </Grid>
  </Label>
</div>
`;

exports[`the \`PriceLabel\` component if there is \`periodText\` if \`isPointing\` is true should return the right structure 1`] = `
<div
  className="ui label price-label is-clickable is-pointing has-period-text"
  onClick={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <Label>
    <Grid
      areColumnsCentered={false}
      className="has-period-text is-pointing"
      isStackable={false}
    >
      <GridColumn>
        <FlexContainer
          alignContent={null}
          alignItems="center"
          flexDirection="row"
          flexWrap={null}
          justifyContent="center"
        >
          <Paragraph
            isCompact={false}
            size="medium"
            weight={null}
          />
          <Heading
            className={null}
            hasMargin={true}
            isColorInverted={false}
            size="medium"
            textAlign={null}
          >
            €999
          </Heading>
        </FlexContainer>
        <Label>
          (ಠ益ಠ)
        </Label>
      </GridColumn>
    </Grid>
    <div
      className="pointer-arrow is-pointing"
    />
    <div
      className="label-shadow is-pointing"
    />
  </Label>
</div>
`;

exports[`the \`PriceLabel\` component if there is \`periodText\` should return the right structure 1`] = `
<div
  className="ui label price-label is-clickable has-period-text"
  onClick={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <Label>
    <Grid
      areColumnsCentered={false}
      className="has-period-text"
      isStackable={false}
    >
      <GridColumn>
        <FlexContainer
          alignContent={null}
          alignItems="center"
          flexDirection="row"
          flexWrap={null}
          justifyContent="center"
        >
          <Paragraph
            isCompact={false}
            size="medium"
            weight={null}
          />
          <Heading
            className={null}
            hasMargin={true}
            isColorInverted={false}
            size="medium"
            textAlign={null}
          >
            €999
          </Heading>
        </FlexContainer>
        <Label>
          (ಠ益ಠ)
        </Label>
      </GridColumn>
    </Grid>
  </Label>
</div>
`;

exports[`the \`PriceLabel\` component if there is no \`periodText\` if \`isPointing\` is true should return the right structure 1`] = `
<div
  className="ui label price-label is-clickable is-pointing"
  onClick={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <Label>
    <Grid
      areColumnsCentered={false}
      className="is-pointing"
      isStackable={false}
    >
      <GridColumn>
        <GridRow>
          <Heading
            className={null}
            hasMargin={true}
            isColorInverted={false}
            size="medium"
            textAlign={null}
          >
            €999
          </Heading>
        </GridRow>
        <GridRow>
          <div
            className="pointer-arrow is-pointing"
          />
        </GridRow>
      </GridColumn>
    </Grid>
  </Label>
</div>
`;

exports[`the \`PriceLabel\` component if there is no \`periodText\` should return the right structure 1`] = `
<div
  className="ui label price-label is-clickable"
  onClick={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <Label>
    <Grid
      areColumnsCentered={false}
      className=""
      isStackable={false}
    >
      <GridColumn>
        <GridRow>
          <Heading
            className={null}
            hasMargin={true}
            isColorInverted={false}
            size="medium"
            textAlign={null}
          >
            €999
          </Heading>
        </GridRow>
        <GridRow />
      </GridColumn>
    </Grid>
  </Label>
</div>
`;
